--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -14,11 +14,11 @@
 			価値あるリユースで、<br class="-only-sp">経済の循環を。
 		</h2>
 		<div class="mv__imgs">
-			<div><img src="<%- $path %>../img/mv-1.jpg" srcset="/assets/img/_sp/mv-1.jpg 480w, /assets/img/mv-1.jpg" alt=""></div>
-			<div><img src="<%- $path %>../img/mv-2.jpg" srcset="/assets/img/_sp/mv-2.jpg 480w, /assets/img/mv-2.jpg" alt=""></div>
-			<div><img src="<%- $path %>../img/mv-3.jpg" srcset="/assets/img/_sp/mv-3.jpg 480w, /assets/img/mv-3.jpg" alt=""></div>
-			<div><img src="<%- $path %>../img/mv-4.jpg" srcset="/assets/img/_sp/mv-4.jpg 480w, /assets/img/mv-4.jpg" alt=""></div>
-			<div><img src="<%- $path %>../img/mv-5.jpg" srcset="/assets/img/_sp/mv-5.jpg 480w, /assets/img/mv-5.jpg" alt=""></div>
+			<div><img class="lazyload" data-src="/assets/img/mv-1.jpg" data-srcset="/assets/img/_sp/mv-1.jpg 480w, /assets/img/mv-1.jpg" alt=""></div>
+			<div><img class="lazyload" data-src="/assets/img/mv-2.jpg" data-srcset="/assets/img/_sp/mv-2.jpg 480w, /assets/img/mv-2.jpg" alt=""></div>
+			<div><img class="lazyload" data-src="/assets/img/mv-3.jpg" data-srcset="/assets/img/_sp/mv-3.jpg 480w, /assets/img/mv-3.jpg" alt=""></div>
+			<div><img class="lazyload" data-src="/assets/img/mv-4.jpg" data-srcset="/assets/img/_sp/mv-4.jpg 480w, /assets/img/mv-4.jpg" alt=""></div>
+			<div><img class="lazyload" data-src="/assets/img/mv-5.jpg" data-srcset="/assets/img/_sp/mv-5.jpg 480w, /assets/img/mv-5.jpg" alt=""></div>
 		</div>
 		<div class="scrollBottom">
 			<span class="scrollBottom__text">SCROLL</span>
@@ -35,7 +35,7 @@
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
-							<img src="<%- $path %>../img/about-img.jpg" srcset="/assets/img/_sp/about-img.jpg 468w, /assets/img/about-img.jpg" alt="">
+							<img class="lazyload" data-src="/assets/img/about-img.jpg" data-srcset="/assets/img/_sp/about-img.jpg 468w, /assets/img/about-img.jpg" alt="">
 						</figure>
 					</div>
 					<section class="section__mv__text">
@@ -144,7 +144,7 @@
 								</div>
 							</section>
 							<div class="message__img ">
-								<span class="mask"><span class="mask__element"><img src="<%- $path %>../img/about-message-img.jpg" alt=""></span></span>
+								<span class="mask"><span class="mask__element"><img class="lazyload" data-src="/assets/img/about-message-img.jpg" alt=""></span></span>
 							</div>
 						</div>
 					</section>
@@ -155,7 +155,7 @@
 								<span>売り上げの過去遷移</span>
 							</h3>
 							<figure>
-								<img src="<%- $path %>../img/about-sell-chart.png" alt="">
+								<img class="lazyload" data-src="/assets/img/about-sell-chart.png" alt="">
 							</figure>
 						</div>
 					</section>
@@ -179,10 +179,10 @@
 									</div>
 									<div class="history__list__event__images">
 										<figure class="history__list__event__image">
-											<img src="<%- $path %>../img/about-history-2008.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/about-history-2008.jpg" alt="">
 										</figure>
 										<figure class="history__list__event__image">
-											<img src="<%- $path %>../img/about-history-2008-2.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/about-history-2008-2.jpg" alt="">
 										</figure>
 									</div>
 								</li>
@@ -248,10 +248,10 @@
 									</div>
 									<div class="history__list__event__images">
 										<figure class="history__list__event__image">
-											<img src="<%- $path %>../img/about-history-2014.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/about-history-2014.jpg" alt="">
 										</figure>
 										<figure class="history__list__event__image">
-											<img src="<%- $path %>../img/about-history-2014-2.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/about-history-2014-2.jpg" alt="">
 										</figure>
 									</div>
 								</li>
@@ -336,10 +336,10 @@
 									</div>
 									<div class="history__list__event__images">
 										<figure class="history__list__event__image">
-											<img src="<%- $path %>../img/about-history-2018.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/about-history-2018.jpg" alt="">
 										</figure>
 										<figure class="history__list__event__image">
-											<img src="<%- $path %>../img/about-history-2018-2.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/about-history-2018-2.jpg" alt="">
 										</figure>
 									</div>
 								</li>
@@ -361,7 +361,7 @@
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
-							<img src="<%- $path %>../img/service-img.jpg" srcset="/assets/img/_sp/service-img.jpg 468w, /assets/img/service-img.jpg" alt="">
+							<img class="lazyload" data-src="/assets/img/service-img.jpg" data-srcset="/assets/img/_sp/service-img.jpg 468w, /assets/img/service-img.jpg" alt="">
 						</figure>
 					</div>
 					<section class="section__mv__text">
@@ -394,7 +394,7 @@
 						<section class="business__main businessShowLayout ">
 							<div class="businessShowLayout__img">
 								<figure>
-									<img src="<%- $path %>../img/service-business-img.jpg" alt="">
+									<img class="lazyload" data-src="/assets/img/service-business-img.jpg" alt="">
 								</figure>
 							</div>
 							<div class="businessShowLayout__text">
@@ -425,7 +425,7 @@
 									</div>
 									<div class="business__detail__thing__image">
 										<figure>
-											<img src="<%- $path %>../img/service-aacd-img.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/service-aacd-img.jpg" alt="">
 										</figure>
 									</div>
 								</li>
@@ -445,7 +445,7 @@
 									</div>
 									<div class="business__detail__thing__image">
 										<figure>
-											<img src="<%- $path %>../img/service-taxfree-img.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/service-taxfree-img.jpg" alt="">
 										</figure>
 									</div>
 								</li>
@@ -467,7 +467,7 @@
 									</div>
 									<div class="business__detail__thing__image">
 										<figure>
-											<img src="<%- $path %>../img/service-otakara-img.jpg" alt="">
+											<img class="lazyload" data-src="/assets/img/service-otakara-img.jpg" alt="">
 										</figure>
 									</div>
 								</li>
@@ -504,7 +504,7 @@
 								<a href=""></a>
 							</div>
 							<div class="business__movie__img">
-								<img src="<%- $path %>../img/service-movie.jpg" alt="">
+								<img class="lazyload" data-src="/assets/img/service-movie.jpg" alt="">
 							</div>
 						</div>
 						<!-- *** 取り扱いブランド -->
@@ -518,57 +518,57 @@
 							<div class="business__brands__content">
 								<ul class="brands">
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-hermes.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-hermes.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-lv.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-lv.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-chanel.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-chanel.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-gucchi.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-gucchi.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-prada.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-prada.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-coach.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-coach.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-cartier.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-cartier.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-bvlgari.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-bvlgari.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-tiffany.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-tiffany.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-rolex.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-rolex.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-omega.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-omega.png" alt="">
 									</li>
 									<li class="brands__brandbox">
-										<img src="<%- $path %>../img/service-brand-logo-burberrys.png" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-logo-burberrys.png" alt="">
 									</li>
 								</ul>
 								<div class="brands__imgs">
 									<div class="brands__img">
-										<img src="<%- $path %>../img/service-brand-img-1.jpg" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-img-1.jpg" alt="">
 									</div>
 									<div class="brands__img">
-										<img src="<%- $path %>../img/service-brand-img-2.jpg" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-img-2.jpg" alt="">
 									</div>
 									<div class="brands__img">
-										<img src="<%- $path %>../img/service-brand-img-3.jpg" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-img-3.jpg" alt="">
 									</div>
 									<div class="brands__img">
-										<img src="<%- $path %>../img/service-brand-img-4.jpg" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-img-4.jpg" alt="">
 									</div>
 									<div class="brands__img">
-										<img src="<%- $path %>../img/service-brand-img-5.jpg" alt="">
+										<img class="lazyload" data-src="/assets/img/service-brand-img-5.jpg" alt="">
 									</div>
 								</div>
 							</div>
@@ -579,7 +579,7 @@
 							<section class="business__main businessShowLayout ">
 								<div class="businessShowLayout__img">
 									<figure>
-										<img src="<%- $path %>../img/service-foreign-img.jpg" alt="">
+										<img class="lazyload" data-src="/assets/img/service-foreign-img.jpg" alt="">
 									</figure>
 								</div>
 								<div class="businessShowLayout__text">
@@ -611,14 +611,14 @@
 										</div>
 										<div class="business__detail__thing__image">
 											<figure>
-												<img src="<%- $path %>../img/service-foreign-loov.jpg" alt="">
+												<img class="lazyload" data-src="/assets/img/service-foreign-loov.jpg" alt="">
 											</figure>
 										</div>
 									</li>
 								</ul>
 								<div class="business__oversea__imgs">
-									<figure><img src="<% $path %>../img/service-foreign-img-1.jpg" alt=""></figure>
-									<figure><img src="<% $path %>../img/service-foreign-img-2.jpg" alt=""></figure>
+									<figure><img class="lazyload" data-src="/assets/img/service-foreign-img-1.jpg" alt=""></figure>
+									<figure><img class="lazyload" data-src="/assets/img/service-foreign-img-2.jpg" alt=""></figure>
 								</div>
 							</section>							
 						</section>
@@ -637,7 +637,7 @@
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
-							<img src="<%- $path %>../img/company-img.jpg" srcset="/assets/img/_sp/company-img.jpg 468w, /assets/img/company-img.jpg" alt="">
+							<img class="lazyload" data-src="/assets/img/company-img.jpg" data-srcset="/assets/img/_sp/company-img.jpg 468w, /assets/img/company-img.jpg" alt="">
 						</figure>
 					</div>
 				</section>
@@ -840,7 +840,7 @@
 									<ul class="areas">
 										<li class="area__detail" id="shop-ginza">
 											<figure class="area__detail__img">
-												<img src="<%- $path %>../img/company-shoplist-kanto-ginza.jpg" width="290" alt="">
+												<img class="lazyload" data-src="/assets/img/company-shoplist-kanto-ginza.jpg" width="290" alt="">
 											</figure>
 											<h5 class="area__detail__index">
 												おたからや 6 銀座店
@@ -872,7 +872,7 @@
 										</li>
 										<li class="area__detail" id="shop-ueno">
 											<figure class="area__detail__img">
-												<img src="<%- $path %>../img/company-shoplist-kanto-ueno.jpg" width="290" alt="">
+												<img class="lazyload" data-src="/assets/img/company-shoplist-kanto-ueno.jpg" width="290" alt="">
 											</figure>
 											<h5 class="area__detail__index">
 												おたからや 上野御徒町店
@@ -914,7 +914,7 @@
 									<ul class="areas">
 										<li class="area__detail" id="shop-umeda">
 											<figure class="area__detail__img">
-												<img src="<%- $path %>../img/company-shoplist-kanto-umeda.jpg" width="290" alt="">
+												<img class="lazyload" data-src="/assets/img/company-shoplist-kanto-umeda.jpg" width="290" alt="">
 											</figure>
 											<h5 class="area__detail__index">
 												おたからや 梅田店
@@ -946,7 +946,7 @@
 										</li>
 										<li class="area__detail" id="shop-shinsaibashi">
 											<figure class="area__detail__img">
-												<img src="<%- $path %>../img/company-shoplist-kanto-shinsaibashi.jpg" width="290" alt="">
+												<img class="lazyload" data-src="/assets/img/company-shoplist-kanto-shinsaibashi.jpg" width="290" alt="">
 											</figure>
 											<h5 class="area__detail__index">
 												おたからや 心斎橋店
