--- a/dev/src/ejs/_include/head.ejs
+++ b/dev/src/ejs/_include/head.ejs
@@ -54,7 +54,7 @@
     font-size: 2.4em;
   }
   @media screen and (max-width: 768px) {
-    .loadingAnim {
+    .loadingAnim__copy {
       font-size: 1.14285714em;
     }
   }
