--- a/dev/src/ejs/_include/_function.ejs
+++ b/dev/src/ejs/_include/_function.ejs
@@ -3,12 +3,12 @@
    $scripts_global=new Array();
 
    $meta = {
-      title: '株式会社MUDUNO',
+      title: '株式会社水野',
       description: 'MIDUNOのコーポレートサイトです。「価値あるリユースで、経済の循環を。」をコーポレートビジョンに、ブランド品の買取・販売、おたからやの運営など、リユース事業を展開する企業です。',
       keywords: 'おたからや,MIDUNO,買取,リユース,銀座,GINZA',
       og:{
-         title: '株式会社MUDUNO',
-         sitename: '株式会社MUDUNO',
+         title: '株式会社水野',
+         sitename: '株式会社水野',
          description: 'MIDUNOのコーポレートサイトです。「価値あるリユースで、経済の循環を。」をコーポレートビジョンに、ブランド品の買取・販売、おたからやの運営など、リユース事業を展開する企業です。',
          type: 'website',
          image: 'https://miduno.jp/assets/img/ogp.jpg',
