１１１９：テキスト修正

--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -136,7 +136,7 @@
 									<p class="message__profile">
 										<span class="mask">
 											<span class="mask__element">
-												1975年1月生まれ。北海道出身。大卒 建築工学科卒業。1997年、大学卒業後にハウスメーカーに就職し、二級建築士の資格取得。2004年1月、世界一周旅行を経験。2009年9月、株式会社 水野 代表取締役を務め、「全国チェーン店
+												1975年1月生まれ。北海道出身。大卒 建築工学科卒業。1997年、大学卒業後にハウスメーカーに就職し、二級建築士の国家資格取得。2004年1月、世界一周旅行を経験。2009年9月、株式会社 水野 代表取締役を務め、「全国チェーン店
 												おたからや」をはじめとしたリユース事業を全国に展開している。
 											</span>
 										</span>
@@ -174,7 +174,7 @@
 										</div>
 										<div class="history__list__event__text">
 											全国チェーン店　おたからや　FC契約を結びおたからやFC一号店となる梅田店を開業<br>
-											ヤフーオークション出店
+											ヤフオク！出店
 										</div>
 									</div>
 									<div class="history__list__event__images">
@@ -602,7 +602,7 @@
 									<li class="business__detail__thing ">
 										<div class="business__detail__thing__text">
 											<h4 class="business__detail__thing__text__index">
-												ネットEコマースのルイ・ヴィトンの中古品に特化したリユース新専門店「LooV」
+												ネットEコマースのルイ・ヴィトンの中古品に特化したリユース新専門店「LooV」<strong>〜COMING SOON〜</strong>
 											</h4>
 											<div class="business__detail__thing__text__content">												
 												Louis Vuitton」に特化したリユース店「LooV（ルーヴ）」を、海外ネット向け販売として展開していきます。「LooV」の由来は、『Louis Vuitton＋loop＝輪』Louis
@@ -659,6 +659,12 @@
 								</tr>
 								<tr>
 									<th>
+										会社名（英語表記）
+									</th>
+									<td>MIDUNO CO.,LTD</td>
+								</tr>
+								<tr>
+									<th>
 										会社名（フリガナ）
 									</th>
 									<td>カブシキガイシャ ミヅノ</td>
@@ -674,8 +680,14 @@
 										所在地
 									</th>
 									<td>
-										本社：〒530-0027　大阪府大阪市北区堂山町1-5 三共梅田ビル３階<br>
-										東京本社：〒104-0061　東京都中央区銀座６丁目４-８ 曽根ビル１階
+										<p>
+											本社：〒530-0027　大阪府大阪市北区堂山町1-5 三共梅田ビル３階<br>
+											06-6232-8066
+										</p>
+										<p>
+											東京本社：〒104-0061　東京都中央区銀座６丁目４-８ 曽根ビル１階<br>
+											03-6263-8768
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -714,11 +726,10 @@
 										事業内容
 									</th>
 									<td>
-										■リユース品全般の買取および販売<br>
 										■買取専門店おたからやのＦＣ加盟店を4店舗運営※2018年11月現在<br>
 										　東京地区：6 銀座店、上野 御徒町店<br>
 										　関西地区：梅田店、心斎橋店<br>
-										■ハイブランド品のネット販売（ルイ・ヴィトン、シャネル、エルメスなど）<br>
+										■ハイブランド品のインターネット販売（ルイ・ヴィトン、シャネル、エルメスなど）<br>
 									</td>
 								</tr>
 								<tr>
@@ -741,7 +752,7 @@
 									</th>
 									<td>
 										AACD（日本流通自主管理会）会員番号 / R-0100 <br>
-										古物商許可番号：東京都公安委員会 第306601706935号 <br>
+										古物商許可番号　：東京都公安委員会 第306601706935号 <br>
 										大阪府公安委員会　第621012100382号 <br>
 										特別国際種事業者番号：S-3-13-31346 <br>
 										酒販免許：北税務署 北法第299号
@@ -923,7 +934,9 @@
 												<p>
 													〒530-0027　大阪府大阪市北区堂山町1-5 <br>
 													三共梅田ビル３階 <br>
-													フリーダイヤル：0120-688-802 <br>
+													<!-- フリーダイヤル：0120-688-802 <br> -->
+													固定電話：06-6362-2118 <br>
+													FAX：06-6809-6758 <br>
 													MAIL：umedaten@otakaraya.jp
 												</p>
 												<p>
@@ -954,7 +967,9 @@
 											<div class="area__detail__content">
 												<p>
 													〒542-0083　大阪府大阪市中央区東心斎橋1-10-12　伊藤ビル1F <br>
-													フリーダイヤル：0120-770-456 <br>
+													<!-- フリーダイヤル：0120-770-456 <br> -->
+													固定電話： 06-6243-1112 <br>
+													FAX：06-6243-1119 <br>	
 													MAIL：shinsaibashiten@otakaraya.jp
 												</p>
 												<p>
