--- a/dev/src/ejs/_include/footer.ejs
+++ b/dev/src/ejs/_include/footer.ejs
@@ -17,7 +17,7 @@
                 </nav>
             </div>
         </div>
-        <div class="siteFooter__copyright">© MIDUNO Inc. All Rights Reserved.</div>
+        <div class="siteFooter__copyright">© MIDUNO CO.,LTD All Rights Reserved.</div>
     </div>
 </footer>
 <%- include( '_scripts.ejs' ); %>
