--- a/dev/src/ejs/_include/head.ejs
+++ b/dev/src/ejs/_include/head.ejs
@@ -18,7 +18,7 @@
     bottom: 0;
     z-index: 20;
     color: #ffffff;
-    transition: all 0.45s cubic-bezier(0.785, 0.135, 0.15, 0.86) 2s;
+    transition: all 0.45s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s;
     background-color: #910000;
   }
   .loadingAnim:before {
@@ -31,7 +31,7 @@
     bottom: 0;
     left: 0;
     display: block;
-    transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.5s;
+    transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s;
     background-color: #ffffff;
   }
   .-is-loaded .loadingAnim {
@@ -71,7 +71,7 @@
     position: absolute;
     z-index: 2;
     left: 0;
-    transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.15s;
+    /* transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.15s; */
     background-color: #fff;
   }
   .loadingAnim .mask__element {
@@ -81,8 +81,8 @@
     transition: all 0.45s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.235s;
   }
   .-is-ready .loadingAnim .mask:before {
-    left: auto;
-    right: 0;
+    /* left: auto;
+    right: 0; */
     animation: maskmove 1s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.15s 1 normal;
   }
   .-is-ready .loadingAnim .mask__element {
