--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -12,10 +12,10 @@
 
 .section{
     & + .section{
-        margin-top: 140px;
+        padding-top: 140px;
 
         @include mq( sp ){
-            margin-top: 70px;
+            padding-top: 70px;
         }         
     }
 
@@ -656,8 +656,8 @@ main .wrap{
         }
 
         &__list__event{
-            padding-top: 40px;
-            padding-bottom: 40px;
+            padding-top: 20px;
+            padding-bottom: 20px;
             list-style: none;
             display: flex;
             justify-content: space-between;
@@ -689,6 +689,8 @@ main .wrap{
 
             &__text{
                 margin-right: 40px;
+                font-size: 1.3rem;
+
 
                 @include mq( sp ){
                     margin-right: 0px;
@@ -1290,6 +1292,18 @@ main .wrap{
                     $icon-margin-right: 10px,
                     $font-size: 1.5em
                 )
+            }
+
+            &__content div,
+            &__content p{
+                margin-top: 0;
+                margin-bottom: 0;
+                padding-top: 0.5em;
+                padding-bottom: 0.5em;
+
+                &:not( :last-child ){
+                    border-bottom: 1px solid #e3e3e3;
+                }
             }
 
 
