--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -12,10 +12,12 @@
 
 .section{
     & + .section{
-        padding-top: 140px;
+        padding-top: 50px;
+        margin-top: 50px;
 
         @include mq( sp ){
-            padding-top: 70px;
+            padding-top: 50px;
+            margin-top: 10px;
         }         
     }
 
@@ -59,7 +61,7 @@
         margin-left: auto;
         position: relative;
         z-index: 1;
-        margin-top: -530px;
+        margin-top: -590px;
 
         @include mq( tab ){
             margin-top: -265px;
@@ -726,14 +728,19 @@ main .wrap{
 
 /////////////////////////////
 
+.section + .section--service{
+    margin-top: 100px;
 
+    @include mq(sp) {
+        margin-top: 50px;
+    }
+}
 .section--service{
-    padding-top: 135px;
     padding-bottom: 135px;
     background-color: #f2f3f4;
 
     @include mq( sp ){
-        padding-top: 70px;
+        // padding-top: 70px;
         padding-bottom: 70px;
     }     
 
