1120修正：ローディング

--- a/dev/src/ejs/_include/head.ejs
+++ b/dev/src/ejs/_include/head.ejs
@@ -85,8 +85,8 @@
     animation: maskmove 1s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.15s 1 normal;
   }
   .-is-ready .loadingAnim .mask__element {
-    display: inherit;
-    transform: translateX(0%);
+    /* display: inherit;
+    transform: translateX(0%); */
   }
 </style><% } %>
   <meta name="viewport" content="width=device-width, user-scalable=yes">
