--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -497,11 +497,9 @@
 									background-color: rgba( 255,255,255, 0.8 );
 								}
 							</style>
-							<div class="business__movie__comingsoon">
-								COMING SOON
-							</div>
+
 							<div class="business__movie__play">
-								<a href=""></a>
+								<a href="https://youtu.be/9zCwOmt8GwQ" data-fancybox></a>
 							</div>
 							<div class="business__movie__img">
 								<img class="lazyload" src="/assets/img/service-movie.jpg" alt="">
@@ -1153,5 +1151,7 @@
 		<!-- ///// -->
 	</main>
 	<%- include( '_include/footer.ejs' ); %>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.2/jquery.fancybox.min.css">
 </body>
 </html>
