--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -3,6 +3,7 @@
 @import "fonts.scss";
 @import "mixins.scss";
 @import "./../../node_modules/slick-carousel/slick/slick";
+@import "./../js/fancybox-master/dist/jquery.fancybox";
 
 ///////////////////////////////////////
 
