1204公開ご修正

--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -474,32 +474,8 @@
 							</ul>
 						</section>
 						<div class="business__movie">
-							<style>
-								.business__movie{
-									line-height: 0;
-									overflow: hidden;
-									position: relative;
-								}
-								.business__movie__comingsoon{
-									width: 100%;
-									height: 100%;
-									display: flex;
-									align-items: center;
-									justify-content: center;
-									position: absolute;
-									top: 0;
-									right: 0;
-									bottom: 0;
-									left: 0;
-									z-index: 5;
-									font-weight: bold;
-									font-family: Roboto, serif;
-									background-color: rgba( 255,255,255, 0.8 );
-								}
-							</style>
-
 							<div class="business__movie__play">
-								<a href="https://youtu.be/9zCwOmt8GwQ" data-fancybox></a>
+								<a href="https://youtu.be/Gp0g92Hd0qU" data-fancybox></a>
 							</div>
 							<div class="business__movie__img">
 								<img class="lazyload" src="/assets/img/service-movie.jpg" alt="">
@@ -679,12 +655,12 @@
 									</th>
 									<td>
 										<p>
-											本社：〒530-0027　大阪府大阪市北区堂山町1-5 三共梅田ビル３階<br>
-											06-6232-8066
+											【本社】<br>〒530-0027　大阪府大阪市北区堂山町1-5 三共梅田ビル３階<br>
+											TEL：06-6232-8066
 										</p>
 										<p>
-											東京本社：〒104-0061　東京都中央区銀座６丁目４-８ 曽根ビル１階<br>
-											03-6263-8768
+											【東京本社】<br>〒104-0061　東京都中央区銀座６丁目４-８ 曽根ビル１階<br>
+											TEL：03-6263-8768
 										</p>
 									</td>
 								</tr>
@@ -858,12 +834,11 @@
 												<p>
 													〒104-0061 東京都中央区銀座６丁目４-８ 曽根ビル１階 <br>
 													フリーダイヤル：0120-800-110 <br>
-													TEL：03-6274-6688　FAX：03-6274-6686 <br>
+													TEL：03-6274-6688 <br>FAX：03-6274-6686 <br>
 													MAIL：six-ginzaten@otakaraya.jp
 												</p>
 												<p>
-													【営業時間】<br>
-													平日：10時30分〜19時／土日祝：10時30分〜18時／定休日：年中無休(夏季休暇・年末年始除く)
+													【営業時間】<br>11時～20時／定休日：年中無休(夏季休暇・年末年始除く)
 												</p>
 												<p>
 													【アクセス】<br>
@@ -891,7 +866,7 @@
 												<p>
 													〒110-0005 東京都台東区上野5-26-5 日清ビル5階 <br>
 													フリーダイヤル：0120-624-777 <br>
-													TEL：03-6803-0777　FAX：03-6803-0887 <br>
+													TEL：03-6803-0777 <br>FAX：03-6803-0887 <br>
 													MAIL：ueno-okachimachi@otakaraya.jp
 												</p>
 												<p>
@@ -933,7 +908,7 @@
 													〒530-0027　大阪府大阪市北区堂山町1-5 <br>
 													三共梅田ビル３階 <br>
 													<!-- フリーダイヤル：0120-688-802 <br> -->
-													固定電話：06-6362-2118 <br>
+													TEL：06-6362-2118 <br>
 													FAX：06-6809-6758 <br>
 													MAIL：umedaten@otakaraya.jp
 												</p>
@@ -966,7 +941,7 @@
 												<p>
 													〒542-0083　大阪府大阪市中央区東心斎橋1-10-12　伊藤ビル1F <br>
 													<!-- フリーダイヤル：0120-770-456 <br> -->
-													固定電話： 06-6243-1112 <br>
+													TEL： 06-6243-1112 <br>
 													FAX：06-6243-1119 <br>	
 													MAIL：shinsaibashiten@otakaraya.jp
 												</p>
