--- a/dev/src/scss/_variables.scss
+++ b/dev/src/scss/_variables.scss
@@ -71,8 +71,8 @@ $fontsize_l		: #{( 34 / 15)}em;
 $fontsize_l_sp	: #{( 20 / 13)}em;
 $fontsize_xl	: #{( 36 / 15)}em;
 $fontsize_xl_sp	: #{( 30 / 13)}em;
-$fontsize_xl_en	: #{( 70 / 15)}em;
-$fontsize_xl_en_sp	: #{( 50 / 13)}em;
+$fontsize_xl_en	: 5rem;
+$fontsize_xl_en_sp	: #{( 39 / 13)}em;
 
 $fontsize_index_s : $fontsize_m;
 $fontsize_index_m : $fontsize_l;
