--- a/dev/src/scss/_modules.scss
+++ b/dev/src/scss/_modules.scss
@@ -71,7 +71,7 @@ body{
 			content: " ";
 			width: 0%;
 			height: 2px;
-			top: 58px;
+			top: 0px;
 			background-color: $red;
 			position: absolute;
 			left: 0;
@@ -149,6 +149,9 @@ body{
 				top: 60px;
 				pointer-events: all;
 			}
+			@at-root .-is-navOpen.-isScrolled .siteHeader__nav{
+				top: 40px;
+			}
 		}
 
 
@@ -208,24 +211,14 @@ body{
 		li:hover,
 		li:active,
 		li:focus{
-			color: #ffffff;
-
-			&:before{
-				@include mq( tab, min ){
-					width: 100%;
-					right: auto;				
-					left: 0;
+			@include mq( tab, min ){
+				color: #ffffff;
+				&:before{
+						width: 100%;
+						right: auto;				
+						left: 0;
 				}
 			}
-			@include mq(tab) {
-				background-color: $red;
-
-				a:after,
-				a:before{
-					display: none;
-				}
-			}
-
 		}
 
 
