--- a/dev/src/ejs/_include/recruit-new.ejs
+++ b/dev/src/ejs/_include/recruit-new.ejs
@@ -226,7 +226,7 @@
     </tr>
     <tr>
         <th>
-            応募・選考時　提出書類
+            応募・選考時<br>提出書類
         </th>
         <td>
             <ul class="inline">
