公開後修正：新宿追加

--- a/dev/src/ejs/_include/recruit-career.ejs
+++ b/dev/src/ejs/_include/recruit-career.ejs
@@ -23,7 +23,7 @@
             </p>
             <p>
                 【東京エリア】<br>
-                東京23区(中央区・台東区)
+                東京23区(中央区・台東区・新宿区)
             </p>
         </td>
     </tr>
