--- a/dev/src/ejs/_include/recruit-b-kanto.ejs
+++ b/dev/src/ejs/_include/recruit-b-kanto.ejs
@@ -27,7 +27,7 @@
         <td>
             <p>
                 【東京エリア】<br>
-                東京23区(中央区・台東区)
+                東京23区(中央区・台東区・新宿区)
             </p>
         </td>
     </tr>
