--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -707,15 +707,15 @@ main .wrap{
             &__images{
                 display: flex;
 
-                figure:first-child{
-                    margin-right: 20px;
+                figure:not(:first-child){
+                    margin-left: 20px;
                 }
 
                 @include mq( sp ){
                     margin-top: 20px;
 
-                    figure:first-child{
-                        margin-right: 10px;
+                    figure:not(:first-child) {
+                        margin-left: 10px;
                     }
                 }                 
             }
