--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -356,6 +356,9 @@
 										<figure class="history__list__event__image">
 											<img class="lazyload" src="/assets/img/about-history-2019.jpg" alt="">
 										</figure>
+										<figure class="history__list__event__image">
+											<img class="lazyload" src="/assets/img/about-history-2019-2.jpg" alt="">
+										</figure>
 									</div>
 								</li>
 							</ul>
