--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -349,7 +349,7 @@
 											2019年1月
 										</div>
 										<div class="history__list__event__text">
-                      「おたからや 東南口店」出店
+                      東京新宿に「おたからや 東南口店」出店
 										</div>
 									</div>
 									<div class="history__list__event__images">
@@ -728,7 +728,7 @@
 										事業所
 									</th>
 									<td>
-                    <a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-shinjuku">おたからや 東南口店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや
+                    <a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-ueno">おたからや 上野御徒町店</a>、<a href="#shop-shinjuku">おたからや 東南口店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや
   心斎橋店</a>
 									</td>
 								</tr>
@@ -920,7 +920,7 @@
 												</p>
 												<p>
 													【営業時間】<br>
-                          10時〜19時30分／定休日：年中無休(夏季休暇・年末年始除く)
+                          11時〜19時30分／定休日：年中無休(夏季休暇・年末年始除く)
 												</p>
 												<p>
 													【アクセス】<br>
