--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -343,6 +343,24 @@
 										</figure>
 									</div>
 								</li>
+								<li class="history__list__event">
+									<div class="history__list__event__then">
+										<div class="history__list__event__date">
+											2019年3月
+										</div>
+										<div class="history__list__event__text">
+                      東京駅 八重洲口に「おたからや 八重洲口店」出店
+										</div>
+									</div>
+									<div class="history__list__event__images">
+										<figure class="history__list__event__image">
+											<img class="lazyload" src="/assets/img/about-history-2018.jpg" alt="">
+										</figure>
+										<figure class="history__list__event__image">
+											<img class="lazyload" src="/assets/img/about-history-2018-2.jpg" alt="">
+										</figure>
+									</div>
+								</li>
 							</ul>
 						</div>
 					</section>
@@ -700,8 +718,8 @@
 										事業内容
 									</th>
 									<td>
-										■買取専門店おたからやのＦＣ加盟店を4店舗運営※2018年11月現在<br>
-										　東京地区：6 銀座店、上野 御徒町店<br>
+										■買取専門店おたからやのＦＣ加盟店を5店舗運営※2019年4月現在<br>
+										　東京地区：6 銀座店、上野 御徒町店、八重洲口店<br>
 										　関西地区：梅田店、心斎橋店<br>
 										■ハイブランド品のインターネット販売（ルイ・ヴィトン、シャネル、エルメスなど）<br>
 									</td>
@@ -711,7 +729,7 @@
 										事業所
 									</th>
 									<td>
-									<a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-ueno">おたからや 上野御徒町店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや 心斎橋店</a>
+									<a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-ueno">おたからや 上野御徒町店</a>、<a href="#shop-yaesu">おたからや　八重洲口店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや 心斎橋店</a>
 									</td>
 								</tr>
 								<tr>
@@ -854,39 +872,73 @@
 												</p>
 											</div>
 										</li>
-										<li class="area__detail" id="shop-ueno">
-											<figure class="area__detail__img">
-												<img class="lazyload" src="/assets/img/company-shoplist-kanto-ueno.jpg" width="290" alt="">
-											</figure>
-											<h5 class="area__detail__index">
-												おたからや 上野御徒町店
-
-											</h5>
-											<div class="area__detail__content">
-												<p>
-													〒110-0005 東京都台東区上野5-26-5 日清ビル5階 <br>
-													フリーダイヤル：0120-624-777 <br>
-													TEL：03-6803-0777 <br>FAX：03-6803-0887 <br>
-													MAIL：ueno-okachimachi@otakaraya.jp
-												</p>
-												<p>
-													【営業時間】<br>
-													10時〜18時／定休日：年中無休(夏季休暇・年末年始除く)
-												</p>
-												<p>
-													【アクセス】<br>
-													JR 御徒町駅より徒歩１分／地下鉄 大江戸線 上野御徒町駅より徒歩１分／地下鉄 日比谷線 仲御徒町駅より徒歩１分／地下鉄 銀座線 上野広小路駅より徒歩１分 <br>
-													<span class="area__detail__link">
-														<a href="https://www.google.co.jp/maps/place/%E3%81%8A%E3%81%9F%E3%81%8B%E3%82%89%E3%82%84+%E4%B8%8A%E9%87%8E%E5%BE%A1%E5%BE%92%E7%94%BA%E5%BA%97/@35.7070265,139.7728787,17z/data=!3m1!4b1!4m5!3m4!1s0x60188ea036b7dd25:0x369795c9794342f6!8m2!3d35.7070265!4d139.7750674" target="_blank">Google Mapで見る</a>
-													</span>
-												</p>
-												<p>
-													東京都公安委員会 第306601706935号　株式会社水野 <br>
-													特別国際種事業者番号：S-3-13-31346 <br>
-													<a href="http://ueno-okachimachi.otakaraya.net/" target="_blank">http://ueno-okachimachi.otakaraya.net/</a>
-												</p>
-											</div>
-										</li>
+                    <li class="area__detail" id="shop-ueno">
+                      <figure class="area__detail__img">
+                        <img class="lazyload" src="/assets/img/company-shoplist-kanto-ueno.jpg" width="290" alt="">
+                      </figure>
+                      <h5 class="area__detail__index">
+                        おたからや 上野御徒町店
+                    
+                      </h5>
+                      <div class="area__detail__content">
+                        <p>
+                          〒110-0005 東京都台東区上野5-26-5 日清ビル5階 <br>
+                          フリーダイヤル：0120-624-777 <br>
+                          TEL：03-6803-0777 <br>FAX：03-6803-0887 <br>
+                          MAIL：ueno-okachimachi@otakaraya.jp
+                        </p>
+                        <p>
+                          【営業時間】<br>
+                          10時〜18時／定休日：年中無休(夏季休暇・年末年始除く)
+                        </p>
+                        <p>
+                          【アクセス】<br>
+                          JR 御徒町駅より徒歩１分／地下鉄 大江戸線 上野御徒町駅より徒歩１分／地下鉄 日比谷線 仲御徒町駅より徒歩１分／地下鉄 銀座線 上野広小路駅より徒歩１分 <br>
+                          <span class="area__detail__link">
+                            <a href="https://www.google.co.jp/maps/place/%E3%81%8A%E3%81%9F%E3%81%8B%E3%82%89%E3%82%84+%E4%B8%8A%E9%87%8E%E5%BE%A1%E5%BE%92%E7%94%BA%E5%BA%97/@35.7070265,139.7728787,17z/data=!3m1!4b1!4m5!3m4!1s0x60188ea036b7dd25:0x369795c9794342f6!8m2!3d35.7070265!4d139.7750674"
+                              target="_blank">Google Mapで見る</a>
+                          </span>
+                        </p>
+                        <p>
+                          東京都公安委員会 第306601706935号　株式会社水野 <br>
+                          特別国際種事業者番号：S-3-13-31346 <br>
+                          <a href="http://ueno-okachimachi.otakaraya.net/" target="_blank">http://ueno-okachimachi.otakaraya.net/</a>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="area__detail" id="shop-yaesu">
+                      <figure class="area__detail__img">
+                        <img class="lazyload" src="/assets/img/company-shoplist-kanto-yaesu.jpg" width="290" alt="">
+                      </figure>
+                      <h5 class="area__detail__index">
+                        おたからや 八重洲口店
+                    
+                      </h5>
+                      <div class="area__detail__content">
+                        <p>
+                          〒103-0028 東京都中央区八重洲一丁目6番17号 大久保ビルディング 4階<br>
+                          フリーダイヤル：0120-624-777 <br>
+                                                  TEL：03-6803-0777 <br>FAX：03-6803-0887 <br>
+                                                  MAIL：ueno-okachimachi@otakaraya.jp
+                        </p>
+                        <p>
+                          【営業時間】<br>
+                          10時〜18時／定休日：年中無休(夏季休暇・年末年始除く)
+                        </p>
+                        <p>
+                          【アクセス】<br>
+                          JR 御徒町駅より徒歩１分／地下鉄 大江戸線 上野御徒町駅より徒歩１分／地下鉄 日比谷線 仲御徒町駅より徒歩１分／地下鉄 銀座線 上野広小路駅より徒歩１分 <br>
+                          <span class="area__detail__link">
+                            <a href="https://goo.gl/maps/DoADJ1xs4J92" target="_blank">Google Mapで見る</a>
+                          </span>
+                        </p>
+                        <!-- <p>
+                          東京都公安委員会 第306601706935号　株式会社水野 <br>
+                          特別国際種事業者番号：S-3-13-31346 <br>
+                          <a href="http://ueno-okachimachi.otakaraya.net/" target="_blank">http://ueno-okachimachi.otakaraya.net/</a>
+                        </p> -->
+                      </div>
+                    </li>
 									</ul>
 								</div>
 							</section>
