--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -341,26 +341,50 @@
 										<figure class="history__list__event__image">
 											<img class="lazyload" src="/assets/img/about-history-2018-2.jpg" alt="">
 										</figure>
+										<figure class="history__list__event__image">
+											<img class="lazyload" src="/assets/img/about-history-2018-3.jpg" alt="">
+										</figure>
 									</div>
 								</li>
-								<li class="history__list__event">
-									<div class="history__list__event__then">
-										<div class="history__list__event__date">
-											2019年3月
-										</div>
-										<div class="history__list__event__text">
+                <li class="history__list__event">
+                  <div class="history__list__event__then">
+                    <div class="history__list__event__date">
+                      2019年4月
+                    </div>
+                    <div class="history__list__event__text">
                       東京駅 八重洲口に「おたからや 八重洲口店」出店
-										</div>
-									</div>
-									<div class="history__list__event__images">
-										<figure class="history__list__event__image">
-											<img class="lazyload" src="/assets/img/about-history-2018.jpg" alt="">
-										</figure>
-										<figure class="history__list__event__image">
-											<img class="lazyload" src="/assets/img/about-history-2018-2.jpg" alt="">
-										</figure>
-									</div>
-								</li>
+                    </div>
+                  </div>
+                  <div class="history__list__event__images">
+                    <figure class="history__list__event__image">
+                      <img class="lazyload" src="/assets/img/about-history-201904.jpg" alt="">
+                    </figure>
+                    <figure class="history__list__event__image">
+                      <img class="lazyload" src="/assets/img/about-history-201904-2.jpg" alt="">
+                    </figure>
+                    <figure class="history__list__event__image">
+                      <img class="lazyload" src="/assets/img/about-history-201904-3.jpg" alt="">
+                    </figure>
+                  </div>
+                </li>
+                <li class="history__list__event">
+                  <div class="history__list__event__then">
+                    <div class="history__list__event__date">
+                      2019年5月
+                    </div>
+                    <div class="history__list__event__text">
+                      「おたからや 心斎橋店」リニューアルオープン
+                    </div>
+                  </div>
+                  <div class="history__list__event__images">
+                    <figure class="history__list__event__image">
+                      <img class="lazyload" src="/assets/img/about-history-201905.jpg" alt="">
+                    </figure>
+                    <figure class="history__list__event__image">
+                      <img class="lazyload" src="/assets/img/about-history-201905-2.jpg" alt="">
+                    </figure>
+                  </div>
+                </li>
 							</ul>
 						</div>
 					</section>
@@ -729,14 +753,14 @@
 										事業所
 									</th>
 									<td>
-									<a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-ueno">おたからや 上野御徒町店</a>、<a href="#shop-yaesu">おたからや　八重洲口店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや 心斎橋店</a>
+									<a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-ueno">おたからや 上野御徒町店</a>、<a href="#shop-yaesu">おたからや 八重洲口店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや 心斎橋店</a>
 									</td>
 								</tr>
 								<tr>
 									<th>
 										従業員数
 									</th>
-									<td>22名(内パート・アルバイト含む) <br>※2018年11月現在</td>
+									<td>22名(内パート・アルバイト含む) <br>※2019年04月現在</td>
 								</tr>
 								<tr>
 									<th>
@@ -916,27 +940,27 @@
                       </h5>
                       <div class="area__detail__content">
                         <p>
-                          〒103-0028 東京都中央区八重洲一丁目6番17号 大久保ビルディング 4階<br>
-                          フリーダイヤル：0120-624-777 <br>
-                                                  TEL：03-6803-0777 <br>FAX：03-6803-0887 <br>
-                                                  MAIL：ueno-okachimachi@otakaraya.jp
+                          〒103-0028 東京都中央区八重洲一丁目6番17号 大久保ビルディング 4F<br>
+                          フリーダイヤル：0120-555-570 <br>
+                                                  TEL：03-6263-2123 <br>FAX：03-6263-2122 <br>
+                                                  MAIL：yaesuguchi@otakaraya.jp
                         </p>
                         <p>
                           【営業時間】<br>
-                          10時〜18時／定休日：年中無休(夏季休暇・年末年始除く)
+                          10時〜18時／定休日：水曜日
                         </p>
                         <p>
                           【アクセス】<br>
-                          JR 御徒町駅より徒歩１分／地下鉄 大江戸線 上野御徒町駅より徒歩１分／地下鉄 日比谷線 仲御徒町駅より徒歩１分／地下鉄 銀座線 上野広小路駅より徒歩１分 <br>
+                          JR東京駅 八重洲北口から徒歩１分<br>
                           <span class="area__detail__link">
                             <a href="https://goo.gl/maps/DoADJ1xs4J92" target="_blank">Google Mapで見る</a>
                           </span>
                         </p>
-                        <!-- <p>
-                          東京都公安委員会 第306601706935号　株式会社水野 <br>
-                          特別国際種事業者番号：S-3-13-31346 <br>
-                          <a href="http://ueno-okachimachi.otakaraya.net/" target="_blank">http://ueno-okachimachi.otakaraya.net/</a>
-                        </p> -->
+                        <p>
+                          東京都公安委員会 第306601706935号　株式会社 水野 <br>
+                          特別国際種事業者番号：S-5-27-00258 <br>
+                          <a href="http://yaesuguchi.otakaraya.net/" target="_blank">http://yaesuguchi.otakaraya.net/</a>
+                        </p>
                       </div>
                     </li>
 									</ul>
