--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -947,7 +947,7 @@
                         </p>
                         <p>
                           【営業時間】<br>
-                          10時〜18時／定休日：水曜日
+                          10時30分〜18時30分／定休日：水曜日
                         </p>
                         <p>
                           【アクセス】<br>
