--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -963,7 +963,7 @@
 												</p>
 												<p>
 													【営業時間】<br>
-                          11時〜19時30分／定休日：火曜日(夏期休暇・年末年始含む)
+                          11時〜18時30分／定休日：火曜日(夏期休暇・年末年始含む)
 												</p>
 												<p>
 													【アクセス】<br>
@@ -996,7 +996,8 @@
                         </p>
                         <p>
                           【営業時間】<br>
-                          10時30分〜18時30分／定休日：水曜日(夏期休暇・年末年始含む)
+                          10時30分〜18時30分／定休日：水曜日(夏期休暇・年末年始含む)<br>
+                          ※7月から 定休日 日曜日変更予定
                         </p>
                         <p>
                           【アクセス】<br>
