--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -963,7 +963,7 @@
 												</p>
 												<p>
 													【営業時間】<br>
-                          11時〜18時30分／定休日：火曜日(夏期休暇・年末年始含む)
+                          10時30分〜18時30分／定休日：火曜日(夏期休暇・年末年始含む)
 												</p>
 												<p>
 													【アクセス】<br>
